# receipt-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/api/: analytics.py  auth.py  deps.py  receipts.py
app/core/: security.py
app/crud/: analytics.py  receipt.py  user.py
app/models/: __init__.py  receipt.py  receipt_item.py  user.py
app/schemas/: analytics.py  receipt.py  user.py
app/services/: categorization.py  s3.py
app/tasks/: celery_app.py  receipt.py
bot/: main.py
bot/handlers/: analytics.py  receipt.py  start.py
bot/services/: api.py
migrations/: env.py
migrations/versions/: 1c8c91ecfc84_create_receipt_tables.py  202faf9a34e1_add_telegram_chat_id_and_bot_token_to_.py  a7e3f91b2c40_add_receipt_filepath_status_and_item_receipt_id.py  b8c6a6c30006_rename_created_at_to_operation_time.py  b8fa3e12ba42_init_users.py  b93f443f4a29_add_category_to_receipt_item.py  c1616caeff47_init_db.py  eca80d12cc87_change_telegram_chat_id_to_bigint.py
nginx/: nginx.conf
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py
tests/unit/: test_security.py
