[tool.poetry]
name = "receipt-tracker"
version = "0.1.0"
description = ""
authors = ["Андрей Мохов <mohovandrew2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.136.3,<0.137.0"
uvicorn = ">=0.48.0,<0.49.0"
pydantic-settings = ">=2.14.1,<3.0.0"
sqlalchemy = "^2.0.50"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pyjwt = "^2.13.0"
bcrypt = "^5.0.0"
email-validator = "^2.3.0"
python-multipart = "^0.0.32"
aioboto3 = "^15.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
